post upgrade clean up